--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.1.2"
+    "@discordjs/rest": "^1.0.1",
+    "discord.js": "^14.1.2",
+    "node-fetch": "^2.6.7",
+    "sequelize": "^6.21.3",
+    "sqlite3": "^5.0.11"
   }
 }
