--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "discord.js": "^14.1.2",
+    "moment": "^2.29.4",
     "node-fetch": "^2.6.7",
     "sequelize": "^6.21.3",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.0.11",
+    "string-similarity": "^4.0.4"
   }
 }
