--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "timeout 3 node .; node ."
   },
   "keywords": [],
@@ -18,5 +18,8 @@
     "sequelize": "^6.21.3",
     "sqlite3": "^5.0.11",
     "string-similarity": "^4.0.4"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   }
 }
